...
          tabBarButtonTestID: 'tab-directory',
        }}
      />
      <Tabs.Screen
        name="promotions"
        options={{
          title: 'Promotions',
          tabBarIcon: makeTabIcon(Megaphone),
          tabBarButtonTestID: 'tab-promotions',
        }}
      />
      <Tabs.Screen
        name="community"
        options={{
          title: 'Community',
...
